[package]
name = "api"
version = "0.1.0"
authors = ["tensor-programming <abeltensor@tensor-programming.com>"]

[dependencies]
diesel = { version = "1.3.3", features = ["postgres"] }
dotenv = "0.15.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
serde = "1.0.80"
serde_derive  = "1.0.80"
serde_json = "1.0.32"
cargo-watch = "7.7.0"
rocket = "0.4.0-dev"
# rocket_codegen_next = {git = "https://github.com/SergioBenitez/Rocket.git", branch="master"}
rocket_cors = { version = "0.5.1", default-features = false }
[dependencies.rocket_contrib]
version = "0.4.0-dev"
default_features = false
features = [ "json", "serve"]
